--- a/express/package.json
+++ b/express/package.json
@@ -15,6 +15,9 @@
   "author": "Daniel Berg",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
-  }
+    "express": "^4.17.3",
+    "sqlite": "^4.0.25",
+    "sqlite3": "^5.0.2"
+  },
+  "type": "module"
 }
